--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
 
+    <button id ="enterbtn">Click to enter Word</button>
+    <h1 id="blankWord"></h1>
+    <h1 id="letters"></h1>
+    <h1>Guesses left: <span id ="counter"></span></h1>
 
-    <script src="assets/javascript/game.js">
-    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assets/javascript/game.js"></script>
 </body>
 </html>
